--- a/EcoVison_Test_Collab.ipynb
+++ b/EcoVison_Test_Collab.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMrFMyDbWKJHdCaZ5DqDnWh",
+      "authorship_tag": "ABX9TyPNPnbuJgPiZRyVr9Ya4czF",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,12 +28,57 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "id": "nLeAJetnlBo5"
       },
       "outputs": [],
-      "source": []
+      "source": [
+        "import numpy as np"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a = [1, 2, 3]"
+      ],
+      "metadata": {
+        "id": "RObBHFPklsE6"
+      },
+      "execution_count": 2,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(a)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "rG-0pRQllyrP",
+        "outputId": "23ddb35d-0f9f-4c34-d9fc-f801866832e8"
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[1, 2, 3]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "xfKK_HEfl3re"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
