--- a/EcoVison_Test_Collab.ipynb
+++ b/EcoVison_Test_Collab.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPNPnbuJgPiZRyVr9Ya4czF",
+      "authorship_tag": "ABX9TyOBZ8+VUR9nf8iKZD0ELlDJ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -58,9 +58,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "rG-0pRQllyrP",
-        "outputId": "23ddb35d-0f9f-4c34-d9fc-f801866832e8"
+        "outputId": "5ba272d8-588d-40da-a4a4-46b8ad1cfd6f"
       },
-      "execution_count": 4,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -73,12 +73,31 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "b = np.array([[4, 5, 6], [7, 8, 0]])\n",
+        "b"
+      ],
       "metadata": {
-        "id": "xfKK_HEfl3re"
+        "id": "xfKK_HEfl3re",
+        "outputId": "0966059a-c102-41e1-9444-31614e92b018",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[4, 5, 6],\n",
+              "       [7, 8, 0]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 6
+        }
+      ]
     }
   ]
 }
