--- a/preprocessing/Transform_data.ipynb
+++ b/preprocessing/Transform_data.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMO7Ads6yTHZrLMOCsA7nrt",
+      "authorship_tag": "ABX9TyMTvNhIGgz8IWOlFh5CCwvh",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,7 +28,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 6,
       "metadata": {
         "id": "tQPTZC8jVr_A"
       },
@@ -43,7 +43,8 @@
         "import random\n",
         "import PIL\n",
         "import sys\n",
-        "import os"
+        "import os\n",
+        "import numpy as np"
       ]
     },
     {
@@ -65,7 +66,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "iFMsGYWEV9UM",
-        "outputId": "6885660a-4d51-4246-afb2-4d47ceebc17b"
+        "outputId": "64262560-4e81-4b4b-8569-1159b256b35e"
       },
       "execution_count": 2,
       "outputs": [
@@ -95,7 +96,7 @@
         "id": "h4-WhCIZV_nW",
         "outputId": "7aa350c6-2de1-4b88-f02d-82f68fe861f8"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3136,13 +3137,13 @@
         "  \"\"\"\n",
         "  path - (/content/drive/MyDrive/Notebooks/Dataset/data/)[train/dev]/[image/mask]/img\n",
         "  \"\"\"\n",
-        "  prefix_train_mask = \"/train/mask/img\"\n",
+        "  prefix_train_mask = \"/train/mask175/img\"\n",
         "  prefix_train_image = \"/train/image/img\"\n",
         "  prefix_dev_mask = \"/dev/mask/img\"\n",
         "  prefix_dev_image = \"/dev/image/img\"\n",
         "\n",
-        "  images_train = [f\"{f}\" for f in listdir(path + prefix_train_image) if f.endswith(\".jpg\")]\n",
-        "  images_dev = [f\"{f}\" for f in listdir(path + prefix_dev_image) if f.endswith(\".jpg\")]\n",
+        "  images_train = [f\"{f}\" for f in listdir(path + prefix_train_image) if f.endswith(\".png\")]\n",
+        "  images_dev = [f\"{f}\" for f in listdir(path + prefix_dev_image) if f.endswith(\".png\")]\n",
         "  print(f\"[INFO] Found train images: {len(listdir(path + prefix_train_image))}\")\n",
         "  print(f\"[INFO] Found train masks: {len(listdir(path + prefix_train_mask))}\")\n",
         "\n",
@@ -3153,14 +3154,14 @@
         "\n",
         "def list_dataset_new(path):\n",
         "  \"\"\"\n",
-        "  path - (/content/drive/MyDrive/Notebooks/Dataset/data/[images/masks]\n",
+        "  path - (/content/drive/MyDrive/Notebooks/Dataset/data/)[images/masks]\n",
         "  \"\"\"\n",
         "  prefix_mask = \"/masks\"\n",
         "  prefix_image = \"/images\"\n",
         "\n",
-        "  images = [f\"{f}\" for f in listdir(path + prefix_image) if f.endswith(\".jpg\")]\n",
+        "  images = [f\"{f}\" for f in listdir(path + prefix_image) if f.endswith(\".png\")]\n",
         "  masks = images.copy()\n",
-        "  # images = [f\"{f}\" for f in listdir(path + prefix_dev_image) if f.endswith(\".jpg\")]\n",
+        "  # images = [f\"{f}\" for f in listdir(path + prefix_dev_image) if f.endswith(\".png\")]\n",
         "  print(f\"[INFO] Found train images: {len(listdir(path + prefix_image))}\")\n",
         "  print(f\"[INFO] Found train masks: {len(listdir(path + prefix_mask))}\")\n",
         "\n",
@@ -3175,10 +3176,10 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "wSScJh7XYQ4g",
-        "outputId": "ce7979e7-24a6-4877-fa7d-63b7c08a0323"
+        "id": "rPj3u_sV6NVt",
+        "outputId": "adc16924-9944-4863-dbb1-818d91b8138b"
       },
-      "execution_count": 10,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -3202,60 +3203,48 @@
         "        i = i + 1\n",
         "    return ls\n",
         "\n",
-        "import tensorflow as tf\n",
-        "import numpy as np\n",
-        "from PIL import Image\n",
-        "\n",
         "# Helper functions for defining tf types\n",
         "def _bytes_feature(value):\n",
-        "    \"\"\"Returns a bytes_list from a string / byte.\"\"\"\n",
-        "    if isinstance(value, type(tf.constant(0))):\n",
-        "        value = value.numpy()  # BytesList won't unpack a string from an EagerTensor.\n",
-        "    return tf.train.Feature(bytes_list=tf.train.BytesList(value=[value]))\n",
+        "  \"\"\"Returns a bytes_list from a string / byte.\"\"\"\n",
+        "  if isinstance(value, type(tf.constant(0))):\n",
+        "    value = value.numpy() # BytesList won't unpack a string from an EagerTensor.\n",
+        "  return tf.train.Feature(bytes_list=tf.train.BytesList(value=[value]))\n",
         "\n",
         "def _int64_feature(value):\n",
-        "    return tf.train.Feature(int64_list=tf.train.Int64List(value=[value]))\n",
+        "  return tf.train.Feature(int64_list=tf.train.Int64List(value=[value]))\n",
         "\n",
         "def _float_feature(value):\n",
-        "    \"\"\"Returns a float_list from a float / double.\"\"\"\n",
-        "    return tf.train.Feature(float_list=tf.train.FloatList(value=[value]))\n",
+        "  \"\"\"Returns a float_list from a float / double.\"\"\"\n",
+        "  return tf.train.Feature(float_list=tf.train.FloatList(value=[value]))\n",
         "\n",
         "def write_image_annotation_pairs_to_tfrecord(filename_pairs, tfrecords_filename):\n",
         "    writer = tf.io.TFRecordWriter(tfrecords_filename)\n",
         "\n",
         "    for img_path, mask_path in filename_pairs:\n",
+        "\n",
         "        img = open(img_path, 'rb').read()\n",
-        "        mask = Image.open(mask_path)\n",
-        "        mask = mask.convert('RGB')  # Convert the mask to RGB format if it's not already\n",
-        "        mask_array = np.array(mask)\n",
-        "        mask_one_channel = np.copy(mask_array[..., 0])\n",
+        "        annotation = open(mask_path, 'rb').read()\n",
+        "        mask = np.asarray(Image.open(mask_path))\n",
+        "        mask_one_channel = np.copy(mask[..., 0])\n",
+        "        for i, num in enumerate([11, 226, 51]):\n",
+        "            mask_one_channel[mask_one_channel == num] = i\n",
         "\n",
-        "        # Define your color mapping here\n",
-        "        color_mapping = {\n",
-        "            (226, 19, 15): 0,\n",
-        "            (11, 195, 72): 1,\n",
-        "            (51, 15, 200): 2\n",
-        "        }\n",
+        "        mask_one_channel = np.clip(mask_one_channel, 0, 2)  # Nouvelle ligne ajoutée\n",
         "\n",
-        "        # Convert the mask to one-hot format using the color mapping\n",
-        "        mask_one_hot = np.zeros(mask_one_channel.shape + (3,), dtype=np.uint8)\n",
-        "        for color, label in color_mapping.items():\n",
-        "            mask_one_hot[np.all(mask_array == np.array(color), axis=-1)] = label\n",
-        "        mask_one_hot = mask_one_hot.ravel().tobytes()\n",
+        "        mask_one_hot = tf.keras.utils.to_categorical(mask_one_channel, 3).ravel().tobytes()\n",
         "\n",
         "        example = tf.train.Example(features=tf.train.Features(feature={\n",
-        "            'image': _bytes_feature(img),\n",
-        "            'mask': _bytes_feature(mask_one_hot),\n",
-        "        }))\n",
+        "              'image': _bytes_feature(img),\n",
+        "              'mask': _bytes_feature(mask_one_hot),\n",
+        "              }))\n",
         "\n",
         "        writer.write(example.SerializeToString())\n",
-        "\n",
         "    writer.close()"
       ],
       "metadata": {
         "id": "PQUyAoMegsk3"
       },
-      "execution_count": 15,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -3278,66 +3267,9 @@
         "possible_amounts = printDivisors(len(filename_pairs))\n",
         "print(f'[INFO] Good dataset sizes: ')\n",
         "for i in possible_amounts:\n",
-        "  print(f\"- {i}\")"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "wmIZ5x_8lca2",
-        "outputId": "c65bc89b-cfb3-4324-d970-0b5511f43149"
-      },
-      "execution_count": 11,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "[INFO] Found train images: 1500\n",
-            "[INFO] Found train masks: 1500\n",
-            "[INFO] Good dataset sizes: \n",
-            "- 1\n",
-            "- 2\n",
-            "- 3\n",
-            "- 4\n",
-            "- 5\n",
-            "- 6\n",
-            "- 10\n",
-            "- 12\n",
-            "- 15\n",
-            "- 20\n",
-            "- 25\n",
-            "- 30\n",
-            "- 50\n",
-            "- 60\n",
-            "- 75\n",
-            "- 100\n",
-            "- 125\n",
-            "- 150\n",
-            "- 250\n",
-            "- 300\n",
-            "- 375\n",
-            "- 500\n",
-            "- 750\n",
-            "- 1500\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "# dataset_dir = \"data_balanced\"\n",
-        "# filename_pairs = list_dataset(f\"/content/gdrive/MyDrive/Dataset/dataset_raw/{dataset_dir}\")\n",
-        "filename_pairs = list_dataset_new(\"/content/drive/MyDrive/Notebooks/Dataset/dataset_16_10_2023/data\")\n",
-        "# 0 - element is train dataset, 1 - element is dev dataset\n",
-        "shuffle(filename_pairs)\n",
-        "possible_amounts = printDivisors(len(filename_pairs))\n",
-        "print(f'[INFO] Good dataset sizes: ')\n",
-        "for i in possible_amounts:\n",
         "  print(f\"- {i}\")\n",
         "\n",
-        "tfrecords_filename_template = \"/content/drive/MyDrive/Notebooks/Dataset/tfrecords_v2_part_{}.tfrec\"\n",
+        "tfrecords_filename_template = \"/content/drive/MyDrive/Notebooks/Dataset/bucket/tfrecords_v2_part_{}.tfrec\"\n",
         "\n",
         "for i in range(1501):\n",
         "  filename = tfrecords_filename_template.format(i)\n",
@@ -3380,10 +3312,10 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "0vewYE9IgxmP",
-        "outputId": "68bc3981-6eab-4936-d1d8-587d7d229f7e"
+        "id": "An5KeBET7d-G",
+        "outputId": "2bf034f5-aa8e-4156-bb9f-6bb4278ed6b1"
       },
-      "execution_count": 16,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
@@ -3416,23 +3348,23 @@
             "- 500\n",
             "- 750\n",
             "- 1500\n",
-            "Removed /content/drive/MyDrive/Notebooks/Dataset/tfrecords_v2_part_1.tfrec\n",
+            "Removed /content/drive/MyDrive/Notebooks/Dataset/bucket/tfrecords_v2_part_1.tfrec\n",
             "[INFO] Writing started!\n",
-            "[INFO] File : /content/drive/MyDrive/Notebooks/Dataset/tfrecords_v2_part_1.tfrec written, with 100 pairs of the photos.\n",
-            "[INFO] File : /content/drive/MyDrive/Notebooks/Dataset/tfrecords_v2_part_2.tfrec written, with 100 pairs of the photos.\n",
-            "[INFO] File : /content/drive/MyDrive/Notebooks/Dataset/tfrecords_v2_part_3.tfrec written, with 100 pairs of the photos.\n",
-            "[INFO] File : /content/drive/MyDrive/Notebooks/Dataset/tfrecords_v2_part_4.tfrec written, with 100 pairs of the photos.\n",
-            "[INFO] File : /content/drive/MyDrive/Notebooks/Dataset/tfrecords_v2_part_5.tfrec written, with 100 pairs of the photos.\n",
-            "[INFO] File : /content/drive/MyDrive/Notebooks/Dataset/tfrecords_v2_part_6.tfrec written, with 100 pairs of the photos.\n",
-            "[INFO] File : /content/drive/MyDrive/Notebooks/Dataset/tfrecords_v2_part_7.tfrec written, with 100 pairs of the photos.\n",
-            "[INFO] File : /content/drive/MyDrive/Notebooks/Dataset/tfrecords_v2_part_8.tfrec written, with 100 pairs of the photos.\n",
-            "[INFO] File : /content/drive/MyDrive/Notebooks/Dataset/tfrecords_v2_part_9.tfrec written, with 100 pairs of the photos.\n",
-            "[INFO] File : /content/drive/MyDrive/Notebooks/Dataset/tfrecords_v2_part_10.tfrec written, with 100 pairs of the photos.\n",
-            "[INFO] File : /content/drive/MyDrive/Notebooks/Dataset/tfrecords_v2_part_11.tfrec written, with 100 pairs of the photos.\n",
-            "[INFO] File : /content/drive/MyDrive/Notebooks/Dataset/tfrecords_v2_part_12.tfrec written, with 100 pairs of the photos.\n",
-            "[INFO] File : /content/drive/MyDrive/Notebooks/Dataset/tfrecords_v2_part_13.tfrec written, with 100 pairs of the photos.\n",
-            "[INFO] File : /content/drive/MyDrive/Notebooks/Dataset/tfrecords_v2_part_14.tfrec written, with 100 pairs of the photos.\n",
-            "[INFO] File : /content/drive/MyDrive/Notebooks/Dataset/tfrecords_v2_part_15.tfrec written, with 100 pairs of the photos.\n",
+            "[INFO] File : /content/drive/MyDrive/Notebooks/Dataset/bucket/tfrecords_v2_part_1.tfrec written, with 100 pairs of the photos.\n",
+            "[INFO] File : /content/drive/MyDrive/Notebooks/Dataset/bucket/tfrecords_v2_part_2.tfrec written, with 100 pairs of the photos.\n",
+            "[INFO] File : /content/drive/MyDrive/Notebooks/Dataset/bucket/tfrecords_v2_part_3.tfrec written, with 100 pairs of the photos.\n",
+            "[INFO] File : /content/drive/MyDrive/Notebooks/Dataset/bucket/tfrecords_v2_part_4.tfrec written, with 100 pairs of the photos.\n",
+            "[INFO] File : /content/drive/MyDrive/Notebooks/Dataset/bucket/tfrecords_v2_part_5.tfrec written, with 100 pairs of the photos.\n",
+            "[INFO] File : /content/drive/MyDrive/Notebooks/Dataset/bucket/tfrecords_v2_part_6.tfrec written, with 100 pairs of the photos.\n",
+            "[INFO] File : /content/drive/MyDrive/Notebooks/Dataset/bucket/tfrecords_v2_part_7.tfrec written, with 100 pairs of the photos.\n",
+            "[INFO] File : /content/drive/MyDrive/Notebooks/Dataset/bucket/tfrecords_v2_part_8.tfrec written, with 100 pairs of the photos.\n",
+            "[INFO] File : /content/drive/MyDrive/Notebooks/Dataset/bucket/tfrecords_v2_part_9.tfrec written, with 100 pairs of the photos.\n",
+            "[INFO] File : /content/drive/MyDrive/Notebooks/Dataset/bucket/tfrecords_v2_part_10.tfrec written, with 100 pairs of the photos.\n",
+            "[INFO] File : /content/drive/MyDrive/Notebooks/Dataset/bucket/tfrecords_v2_part_11.tfrec written, with 100 pairs of the photos.\n",
+            "[INFO] File : /content/drive/MyDrive/Notebooks/Dataset/bucket/tfrecords_v2_part_12.tfrec written, with 100 pairs of the photos.\n",
+            "[INFO] File : /content/drive/MyDrive/Notebooks/Dataset/bucket/tfrecords_v2_part_13.tfrec written, with 100 pairs of the photos.\n",
+            "[INFO] File : /content/drive/MyDrive/Notebooks/Dataset/bucket/tfrecords_v2_part_14.tfrec written, with 100 pairs of the photos.\n",
+            "[INFO] File : /content/drive/MyDrive/Notebooks/Dataset/bucket/tfrecords_v2_part_15.tfrec written, with 100 pairs of the photos.\n",
             "[INFO] Files created : 15.\n"
           ]
         }
